[package]
name = "just-the-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
gumdrop = "0.8.1"
serde = { version = "1.0.197", features = ["serde_derive"] }
indexmap = { version = "2.2.3", features = ["serde"] }
toml = { version = "0.8.10", features = ["parse"] }
