[package]
name = "just-the-code"
version = "1.0.0"
edition = "2021"
authors = ["Shad Amethyst"]
description = "A ripgrep preprocessor to remove comments and strings from code."
readme = "README.md"
repository = "https://github.com/adri326/just-the-code/"
license = "MIT"
keywords = ["ripgrep", "preprocessor"]
exclude = ["/assets"]

[dependencies]
directories = "5.0.1"
gumdrop = "0.8.1"
serde = { version = "1.0.197", features = ["serde_derive"] }
indexmap = { version = "2.2.3", features = ["serde"] }
toml = { version = "0.8.10", features = ["parse"] }
